# expert-service

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  conanfile.py  conanfile.txt  main
notes/: notes.txt  todos.md
scripts/: build-clang.sh  build-gcc.sh  build.sh  configure.sh  run.sh  test-clang.sh  test-gcc.sh  test.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/expert/: CMakeLists.txt  Expert.cpp  Expert.h  Tools.cpp
src/expert/theorems/: AnglesTheorems.cpp  LinesTheorems.cpp  PolygonsTheorems.cpp  SpecificPropertiesTheorems.cpp  Tools.cpp
src/expertBackground/: CMakeLists.txt  DependenciesBank.cpp  DependenciesBank.h  HeuristicsBank.cpp  HeuristicsBank.h  ShapesBank.cpp  ShapesBank.h  expertBackground.cpp  expertBackground.h
src/expertBackground/dependency/: Dependency.cpp  Dependency.h  DependencyConcepts.cpp  DependencyConcepts.h  DependencyOneArg.cpp  DependencyOneArg.h  DependencyThreeArgs.cpp  DependencyThreeArgs.h  DependencyTwoArgs.cpp  DependencyTwoArgs.h  ExerciseDescriptionDependency.cpp  ExerciseDescriptionDependency.h  IDependency.cpp  IDependency.h
src/expertBackground/models/: AngleModel.cpp  AngleModel.h  CircleModel.cpp  CircleModel.h  ExpressionModel.cpp  ExpressionModel.h  IModel.cpp  IModel.h  IdentifierModel.cpp  IdentifierModel.h  LineModel.cpp  LineModel.h  ModelsPairModel.cpp  ModelsPairModel.h  PointModel.cpp  PointModel.h  PointsPairModel.cpp  PointsPairModel.h  PolygonModel.cpp  PolygonModel.h
src/expertBackground/utilities/: Graph.cpp  Graph.h  LocalTimer.cpp  LocalTimer.h  MathHelper.cpp  MathHelper.h  SchemeGraph.cpp  SchemeGraph.h  VariablesGraph.cpp  VariablesGraph.h
src/symbolicAlgebra/: CMakeLists.txt  Constant.cpp  Constant.h  Equation.cpp  Equation.h  Expression.cpp  Expression.h  ExpressionBuilder.cpp  ExpressionBuilder.h  Fraction.cpp  Fraction.h  Integer.cpp  Integer.h  Rational.cpp  Rational.h  Solve.cpp  Solve.h  Variable.cpp  Variable.h  symbolicAlgebra.cpp  symbolicAlgebra.h
src/symbolicAlgebra/implementation/: Atom.cpp  Atom.h  Utilities.cpp  Utilities.h
src/symbolicAlgebra/implementation/functions/: Cos.cpp  Cos.h  Cot.cpp  Cot.h  Log.cpp  Log.h  Sin.cpp  Sin.h  Sqrt.cpp  Sqrt.h  Tan.cpp  Tan.h
src/symbolicAlgebra/implementation/operands/: Const.cpp  Const.h  Number.cpp  Number.h  Var.cpp  Var.h
src/symbolicAlgebra/implementation/operators/: Power.cpp  Power.h  Product.cpp  Product.h  Sum.cpp  Sum.h
test/: CMakeLists.txt
test/expert/: CMakeLists.txt  ExpertBasicMethods.cpp  ExpertInitializing.cpp  ExpertTestBase.h  main.cpp
test/expertBackground/: CMakeLists.txt  DependenciesBankAddingDependencies.cpp  EmptyDependenciesBankCreating.cpp  ExpertBackgroundTestBase.h  GraphFunctions.cpp  ShapesBankAddingShapes.cpp
test/symbolicAlgebra/: BasicExpressionsCreating.cpp  CMakeLists.txt  ComplexExpressionCreating.cpp  ConstProperties.cpp  ConstantsCreating.cpp  ExpressionsWithOperatorsCreating.cpp  FunctionsCreating.cpp  FunctionsProperties.cpp  NumberProperties.cpp  PowerProperties.cpp  ProductProperties.cpp  SolvingExpressionsAndSystemsOfEquations.cpp  SumProperties.cpp  SymbolicAlgebraTestBase.h  Utilities.cpp  VarProperties.cpp  VariousAtomsCreatingAndProperties.cpp
